fixed newspaper alignment

--- a/SuperHero_v8/ble_js/public/scene5.css
+++ b/SuperHero_v8/ble_js/public/scene5.css
@@ -4,7 +4,7 @@
 }
 #timerStopWatch {
   position: absolute;
-  left: 1650px;
+  left: -150px;
   top: -20px;
   z-index: 90;
 }
